--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="languages">
           <h3 class="all_title">Languages</h3>
           <ul class="all_list">
-            <li><span class="gray_text">Ukrainian - native speacer</span></li>
+            <li><span class="gray_text">Ukrainian - native speaker</span></li>
             <li><span class="gray_text">English - B1-B2</span></li>
             <li><span class="gray_text">Polish - A2</span></li>
           </ul>
