--- a/index.html
+++ b/index.html
@@ -1,125 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <title>CV</title>
-  </head>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-  <body>
-    <div class="wraper">
-      <div class="sidebar">
-        <img src="./CV_photo.jpg" alt="user_photo" class="user_photo" />
-        <div class="sidebar_info">
-          <div class="contacts">
-            <h3 class="contacts_title">Contacts</h3>
-            <div>
-              <p class="contacts_p">
-                <span class="contacts_type">Phone:</span>
-                <a href="tel:+380984219898" class="contacts_link"
-                  >+38 (098) 421 98 98</a
-                >
-              </p>
-              <p class="contacts_p">
-                <span class="contacts_type">Email:</span>
-                <a
-                  href="mailto:vladyslav.zaikovskyi@gmail.com"
-                  class="contacts_link"
-                  >vladyslav.zaikovskyi@gmail.com</a
-                >
-              </p>
-            </div>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>CV</title>
+</head>
+
+<body>
+  <div class="wraper">
+    <div class="sidebar">
+      <img src="./CV_photo.jpg" alt="user_photo" class="user_photo" />
+      <div class="sidebar_info">
+        <div class="contacts">
+          <h3 class="contacts_title">Contacts</h3>
+          <div>
+            <p class="contacts_p">
+              <span class="contacts_type">Phone:</span>
+              <a href="tel:+380984219898" class="contacts_link">+38 (098) 421 98 98</a>
+            </p>
+            <p class="contacts_p">
+              <span class="contacts_type">Email:</span>
+              <a href="mailto:vladyslav.zaikovskyi@gmail.com" class="contacts_link">vladyslav.zaikovskyi@gmail.com</a>
+            </p>
           </div>
-          <div class="tech_skills">
-            <h3>Tech Skills</h3>
-            <ul class="u_list">
-              <li><span class="skills_text">HTML5</span></li>
-              <li><span class="skills_text">CSS3</span></li>
-              <li><span class="skills_text">GIT</span></li>
-              <li><span class="skills_text">JavaScript</span></li>
-              <li><span class="skills_text">React</span></li>
-            </ul>
-          </div>
-          <div class="soft_skills">
-            <h3>Soft Skills</h3>
-            <ul class="u_list">
-              <li><span class="skills_text">Scrum</span></li>
-              <li><span class="skills_text">Agile</span></li>
-            </ul>
-          </div>
+        </div>
+        <div class="tech_skills">
+          <h3>Tech Skills</h3>
+          <ul class="u_list">
+            <li><span class="skills_text">HTML5</span></li>
+            <li><span class="skills_text">CSS3</span></li>
+            <li><span class="skills_text">GIT</span></li>
+            <li><span class="skills_text">JavaScript</span></li>
+            <li><span class="skills_text">React</span></li>
+          </ul>
+        </div>
+        <div class="soft_skills">
+          <h3>Soft Skills</h3>
+          <ul class="u_list">
+            <li><span class="skills_text">Scrum</span></li>
+            <li><span class="skills_text">Agile</span></li>
+          </ul>
         </div>
       </div>
-      <div class="main_info">
-        <div class="user_info">
-          <h1 class="us_name">Vladyslav Zaikovskyi</h1>
-        </div>
+    </div>
+    <div class="main_info">
+      <div class="user_info">
+        <h1 class="us_name">Vladyslav Zaikovskyi</h1>
+      </div>
 
-        <div class="work_experience">
-          <h3 class="all_title">Work Experience</h3>
-          <div class="work">
-            <h4>
-              Data management assistant <span class="orange_txt">Envelo</span>
-            </h4>
-            <p class="period">
-              January 2021 - May 2021 <b class="line_b">|</b> Warsaw
-            </p>
-            <ul class="all_list">
-              <li>
-                <span class="gray_text">Data managing.</span>
-              </li>
-            </ul>
-          </div>
-          <div class="work">
-            <h4>
-              Graphic assistant <span class="orange_txt">MindyTeams</span>
-            </h4>
-            <p class="period">
-              October 2021 - May 2022 <b class="line_b">|</b> Rivne
-            </p>
-            <ul class="all_list">
-              <li>
-                <span class="gray_text">Photo, video, sound editing.</span>
-              </li>
-            </ul>
-          </div>
-          <div class="work">
+      <div class="work_experience">
+        <h3 class="all_title">Work Experience</h3>
+        <div class="work">
+          <h4>
+            Data management assistant <span class="orange_txt">Envelo</span>
+          </h4>
+          <p class="period">
+            January 2021 - May 2021 <b class="line_b">|</b> Warsaw
+          </p>
+          <ul class="all_list">
+            <li>
+              <span class="gray_text">Data managing.</span>
+            </li>
+          </ul>
+        </div>
+        <div class="work">
+          <h4>
+            Graphic assistant <span class="orange_txt">MindyTeams</span>
+          </h4>
+          <p class="period">
+            October 2021 - May 2022 <b class="line_b">|</b> Rivne
+          </p>
+          <ul class="all_list">
+            <li>
+              <span class="gray_text">Photo, video, sound editing.</span>
+            </li>
+          </ul>
+        </div>
+        <div class="work">
           <h4>CS Representative <span class="orange_txt">Zone3000</span></h4>
           <p class="period">May 2022 - Up to now <b class="line_b">|</b> Remote</p>
           <ul class="all_list">
             <li><span class="gray_text">Clients support in domains and hosting queries. </span></li>
         </div>
-        </div>
-        <div class="education">
-          <h3 class="all_title">Education</h3>
-          <h4 class="orange_txt">National University Lviv Polytechnic</h4>
-          <h5>Cybersecurity</h5>
-          <p class="period">
-            September 2018 - June 2022 <b class="line_b">|</b> Lviv
-          </p>
-        </div>
-        <div class="education">
-          <h4 class="orange_txt">National University of Water and Environmental Engineering</h4>
-          <h5>Computer Science</h5>
-          <p class="period">
-            September 2022 - Up to now <b class="line_b">|</b> Rivne
-          </p>
-        </div>
-        <div class="languages">
-          <h3 class="all_title">Languages</h3>
-          <ul class="all_list">
-            <li><span class="gray_text">Ukrainian - native speaker</span></li>
-            <li><span class="gray_text">English - B1-B2</span></li>
-            <li><span class="gray_text">Polish - A2</span></li>
-          </ul>
-        </div>
+      </div>
+      <div class="education">
+        <h3 class="all_title">Education</h3>
+        <h4 class="orange_txt">National University Lviv Polytechnic</h4>
+        <h5>Cybersecurity</h5>
+        <p class="period">
+          September 2018 - June 2022 <b class="line_b">|</b> Lviv
+        </p>
+        <h4 class="orange_txt">National University of Water and Environmental Engineering</h4>
+        <h5>Computer Science</h5>
+        <p class="period">
+          September 2022 -
+          Up to now <b class="line_b">|</b> Rivne
+        </p>
+      </div>
+      <div class="github">
+        <h3 class="all_title">Github</h3>
+        <a href="https://github.com/primaldarak" target="_blank" class="orange_txt">https://github.com/primaldarak</a>
+      </div>
+      <div class="languages">
+        <h3 class="all_title">Languages</h3>
+        <ul class="all_list">
+          <li><span class="gray_text">Ukrainian - native speaker</span></li>
+          <li><span class="gray_text">English - B1-B2</span></li>
+          <li><span class="gray_text">Polish - A2</span></li>
+        </ul>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
