--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
         <h4 class="orange_txt">National University of Water and Environmental Engineering</h4>
         <h5>Computer Science</h5>
         <p class="period">
-          September 2022 -
-          Up to now <b class="line_b">|</b> Rivne
+          September 2022 - December 2023<b class="line_b">|</b> Rivne
         </p>
       </div>
       <div class="github">
@@ -111,7 +110,7 @@
         <h3 class="all_title">Languages</h3>
         <ul class="all_list">
           <li><span class="gray_text">Ukrainian - native speaker</span></li>
-          <li><span class="gray_text">English - B1-B2</span></li>
+          <li><span class="gray_text">English - B2</span></li>
           <li><span class="gray_text">Polish - A2</span></li>
         </ul>
       </div>
