--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
               <span class="contacts_type">Email:</span>
               <a href="mailto:vladyslav.zaikovskyi@gmail.com" class="contacts_link">vladyslav.zaikovskyi@gmail.com</a>
             </p>
+            <p class="contacts_p">
+              <span class="contacts_type">LinkedIn:</span>
+              <a target="_blank" href="https://www.linkedin.com/in/vlad-zaikovskyi-7b249b241/"
+                class="contacts_link">linkedin.com/in/vlad-zaikovskyi</a>
+            </p>
           </div>
         </div>
         <div class="tech_skills">
@@ -36,15 +41,20 @@
             <li><span class="skills_text">HTML5</span></li>
             <li><span class="skills_text">CSS3</span></li>
             <li><span class="skills_text">GIT</span></li>
+            <li><span class="skills_text">GitHub</span></li>
             <li><span class="skills_text">JavaScript</span></li>
+            <li><span class="skills_text">Typescript</span></li>
             <li><span class="skills_text">React</span></li>
+            <li><span class="skills_text">Next.js</span></li>
           </ul>
         </div>
         <div class="soft_skills">
           <h3>Soft Skills</h3>
           <ul class="u_list">
-            <li><span class="skills_text">Scrum</span></li>
-            <li><span class="skills_text">Agile</span></li>
+            <li><span class="skills_text">Problem-solving</span></li>
+            <li><span class="skills_text">Adaptability</span></li>
+            <li><span class="skills_text">Time-management</span></li>
+            <li><span class="skills_text">Communication</span></li>
           </ul>
         </div>
       </div>
@@ -111,7 +121,6 @@
         <ul class="all_list">
           <li><span class="gray_text">Ukrainian - native speaker</span></li>
           <li><span class="gray_text">English - B2</span></li>
-          <li><span class="gray_text">Polish - A2</span></li>
         </ul>
       </div>
     </div>
